syntax = "proto3";

option csharp_namespace = "EventBooking.Discount.Protos";

package discount;

service DiscountProtoService {
  rpc GetDiscount(GetDiscountRequest) returns (CouponModel);
  rpc CreateDiscount(CreateDiscountRequest) returns (CouponModel);
  rpc UpdateDiscount(UpdateDiscountRequest) returns (CouponModel);
  rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest {
  string eventName = 1;
}

message CouponModel {
  int32 id = 1;
  string eventName = 2;
  string description = 3;
  int32 discountPercentage = 4;
}

message CreateDiscountRequest {
  CouponModel coupon = 1;
}

message UpdateDiscountRequest {
  CouponModel coupon = 1;
}

message DeleteDiscountRequest {
  string eventName = 1;
}

message DeleteDiscountResponse {
  bool success = 1;
}
